--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Arigah!</div>
-		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | f1 aficionado </div>
+		<div class="tagline"> Dev || Code Sometimes || f1 aficionado </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/darigah"><i class="fab fa-github"></i></a>
