--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Arigah here!</div>
+		<div class="intro">Hi, I'm Arigah!</div>
 		<div class="tagline"> Dev || Code Sometimes || f1 aficionado </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
