--- a/index.html
+++ b/index.html
@@ -18,3 +18,18 @@
 	
 	<link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
 	
+</head>
+<body>
+	<main>
+		<div class="intro">Hi, I'm Arigah!</div>
+		<div class="tagline">Dev || Code Sometimes || </div>
+
+		<div class="icons-social">
+			<a target="_blank" href="https://github.com/darigah"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/maghreb00"><i class="fab fa-twitter"></i></a>
+			<!-- Add the remaining social media icons -->
+
+			<!-- Modify the video source and poster image accordingly -->
+			<div class="video-container">
+				<video id="my-video" class="video-js">
+					<!--
