--- a/index.html
+++ b/index.html
@@ -18,6 +18,121 @@
 	
 	<link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
 	
+	<style>
+		/* Global Styles */
+
+		html {
+			font-family: 'Roboto', sans-serif;
+			scroll-behavior: smooth;
+		}
+
+		body {
+			margin: 0;
+			padding: 0;
+			background-color: #f2f2f2;
+			color: #333333;
+			line-height: 1.6;
+		}
+
+		a {
+			color: #007bff;
+			text-decoration: none;
+		}
+
+		a:hover {
+			text-decoration: underline;
+		}
+
+		.container {
+			max-width: 960px;
+			margin: 0 auto;
+			padding: 30px;
+		}
+
+		/* Typography */
+
+		h1, h2, h3 {
+			font-weight: 700;
+			margin-bottom: 20px;
+		}
+
+		h1 {
+			font-size: 36px;
+			line-height: 1.2;
+		}
+
+		h2 {
+			font-size: 30px;
+		}
+
+		h3 {
+			font-size: 24px;
+		}
+
+		p {
+			margin-bottom: 20px;
+		}
+
+		/* Header */
+
+		header {
+			background-color: #ffffff;
+			padding: 20px 0;
+		}
+
+		.brand {
+			font-family: 'Reem Kufi', sans-serif;
+			font-size: 36px;
+			margin: 0;
+		}
+
+		/* Main Content */
+
+		.main {
+			padding: 60px 0;
+			text-align: center;
+		}
+
+		.intro {
+			font-size: 48px;
+			font-weight: 600;
+			margin-bottom: 20px;
+			color: #333333;
+		}
+
+		.tagline {
+			font-size: 24px;
+			margin-bottom: 40px;
+			color: #777777;
+		}
+
+		.icons-social {
+			margin-bottom: 40px;
+		}
+
+		.icons-social a {
+			display: inline-block;
+			margin: 10px;
+			color: #777777;
+			font-size: 30px;
+		}
+
+		.icons-social a:hover {
+			color: #007bff;
+		}
+
+		/* Footer */
+
+		footer {
+			background-color: #333333;
+			color: #ffffff;
+			padding: 20px 0;
+		}
+
+		.footer-text {
+			font-size: 14px;
+			margin: 
+	
 </head>
 <body>
 	<main>
