--- a/index.html
+++ b/index.html
@@ -1,49 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title>Douglas Arigah | Awesome Dev</title>
-
-	<link rel="icon" href="favicon.ico" type="image/png" />
-
-	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/grey-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Douglas Arigah | Awesome Dev</title>
+  <link rel="icon" href="favicon.ico" type="image/png">
+  <link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/themes/grey-white.css">
+  <!-- Additional Theme CSS Files -->
+  <!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
+  <!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-	<main>
-		<div class="intro">Hi, I'm Arigah!</div>
-		<div class="tagline"> Dev || Code Sometimes || </div>
-	
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
-			<a target="_blank" href="https://github.com/darigah"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/maghreb00"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://dev.to/darigah"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/darigah"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/darigah"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@darigah"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
-			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
-			
-                 </div>
-		
-	</main>
-</body>
-</html>
+  <header class="header">
+    <h1>Douglas Arigah</h1>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section id="about" class="section">
+      <h2>About Me</h2>
+      <p>
+        Welcome to my website! I'm a passionate developer with a love for coding and Formula 1. I enjoy building web applications and exploring new technologies.
+      </p>
+    </section>
+
+    <section id="projects" class="section">
+      <h2>Projects</h2>
+      <p>
+        Check out some of my latest projects and see what I've been working on.
+      </p>
+      <!-- Add project cards or project list here -->
+    </section>
+
+    <section id="contact" class="section">
+      <h2>Contact Me</h2>
+      <p>
+        Let's connect! Feel free to reach out to me through any of the following channels:
+      </p>
+      <div class="icons-social">
+        <a href="https://github.com/darigah" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/darigah" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://dev.to/darigah" target="_blank"><i class="fab fa-dev"></i></a>
+        <a href="https://stackoverflow.com/story/darigah" target="_blank"><i class="fab fa-stack-overflow"></i
