--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 </head>
 <body>
   <header class="header">
+    <section class="approach-section">
+  <div class="container">
     <h1>Douglas Arigah</h1>
     <nav class="navbar">
       <ul>
@@ -31,6 +33,10 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rhoncus ligula sit amet ex posuere semper.</p>
+    <a href="#" class="btn">Learn More</a>
+  </div>
+</section>
   </header>
 
   <main class="container">
