--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header class="header">
     <section class="approach-section">
   <div class="container">
-    <h1>Douglas Arigah</h1>
+    <h1>Douglas Arigah
     <nav class="navbar">
       <ul>
         <li><a href="#about">About</a></li>
@@ -33,8 +33,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis rhoncus ligula sit amet ex posuere semper.</p>
-    <a href="#" class="btn">Learn More</a>
+    </h1>
   </div>
 </section>
   </header>
