--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/themes/grey-white.css">
+  <!--link rel="stylesheet" href="css/themes/grey-white.css">
   <!-- Additional Theme CSS Files -->
   <!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
   <!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
