--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
   <!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-  <header class="header">
+  <header class="masthead">
+    <div class="container position-relative">
+                <div class="row justify-content-center">
+                    <div class="col-xl-6">
+                        <div class="text-center text-white">
     <section class="approach-section">
   <div class="container">
-    <h1>Douglas Arigah
-    <nav class="navbar">
+    <h1 class="mb-5">Douglas Arigah
+    <nav class="navbar navbar-light bg-light static-top">
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -40,6 +44,10 @@
     </h1>
   </div>
 </section>
+                           </div>
+                    </div>
+                </div>
+       </div>
   </header>
 
   <main class="container">
