--- a/index.html
+++ b/index.html
@@ -2,77 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
   <title>Douglas Arigah | Awesome Dev</title>
   <link rel="icon" href="favicon.ico" type="image/png">
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
-  <!--link rel="stylesheet" href="css/themes/grey-white.css">
-  <!-- Additional Theme CSS Files -->
-  <!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
-  <!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
   <header class="masthead">
-    <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-    <section class="approach-section">
-  <div class="container">
-    <h1 class="mb-5">Douglas Arigah
-    <nav class="navbar navbar-light bg-light static-top">
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    </h1>
-  </div>
-</section>
-                           </div>
-                    </div>
-                </div>
-       </div>
+    <div class="masthead-inner">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-6">
+            <div class="text-center text-white">
+              <h1 class="mb-5">Douglas Arigah</h1>
+              <nav class="navbar navbar-light bg-light static-top">
+                <ul>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#projects">Projects</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <main class="container">
     <section id="about" class="section">
-      <h2>About Me</h2>
-      <p>
-        Welcome to my website! I'm a passionate developer with a love for coding and Formula 1. I enjoy building web applications and exploring new technologies.
-      </p>
+      <div class="container">
+        <h2>About Me</h2>
+        <p>
+          Welcome to my website! I'm a passionate developer with a love for coding and Formula 1. I enjoy building web applications and exploring new technologies.
+        </p>
+      </div>
     </section>
 
     <section id="projects" class="section">
-      <h2>Projects</h2>
-      <p>
-        Check out some of my latest projects and see what I've been working on.
-      </p>
-      <!-- Add project cards or project list here -->
+      <div class="container">
+        <h2>Projects</h2>
+        <p>
+          Check out some of my latest projects and see what I've been working on.
+        </p>
+        <!-- Add project cards or project list here -->
+      </div>
     </section>
 
     <section id="contact" class="section">
-      <h2>Contact Me</h2>
-      <p>
-        Let's connect! Feel free to reach out to me through any of the following channels:
-      </p>
-      <div class="icons-social">
-        <a href="https://github.com/darigah" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/darigah" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://dev.to/darigah" target="_blank"><i class="fab fa-dev"></i></a>
-        <a href="https://stackoverflow.com/story/darigah" target="_blank"><i class="fab fa-stack-overflow"></i
+      <div class="container">
+        <h2>Contact Me</h2>
+        <p>
+          Let's connect! Feel free to reach out to me through any of the following channels:
+        </p>
+        <div class="icons-social">
+          <a href="
