--- a/index.html
+++ b/index.html
@@ -3,62 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <title>Douglas Arigah | Awesome Dev</title>
+  <meta name="description" content="Douglas Arigah - Full Stack Developer Portfolio">
+  <title>Douglas Arigah | Full Stack Developer</title>
   <link rel="icon" href="favicon.ico" type="image/png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="masthead">
-    <div class="masthead-inner">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xl-6">
-            <div class="text-center text-white">
-              <h1 class="mb-5">Douglas Arigah</h1>
-              <nav class="navbar navbar-light bg-light static-top">
-                <ul>
-                  <li><a href="#about">About</a></li>
-                  <li><a href="#projects">Projects</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                </ul>
-              </nav>
+  <header class="masthead text-white text-center d-flex align-items-center justify-content-center" style="background: url('images/hero-bg.jpg') no-repeat center center/cover; height: 100vh;">
+    <div class="container">
+      <h1 class="display-3 fw-bold">Douglas Arigah</h1>
+      <p class="lead">Full Stack Developer | Tech Enthusiast | F1 Fanatic</p>
+      <a href="#projects" class="btn btn-primary btn-lg mt-3">View My Work</a>
+    </div>
+  </header>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">DA</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <main>
+    <section id="about" class="py-5 bg-light">
+      <div class="container text-center">
+        <h2 class="fw-bold">About Me</h2>
+        <p class="lead">Passionate about designing Telco Networks, coding, scripting, and exploring cutting-edge technologies.</p>
+      </div>
+    </section>
+
+    <section id="projects" class="py-5">
+      <div class="container text-center">
+        <h2 class="fw-bold">Projects</h2>
+        <p class="lead">Explore some of my recent work.</p>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card shadow-sm">
+              <img src="images/project1.jpg" class="card-img-top" alt="Project 1">
+              <div class="card-body">
+                <h5 class="card-title">Project One</h5>
+                <p class="card-text">A web application designed to streamline workflow.</p>
+                <a href="#" class="btn btn-outline-primary">View Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card shadow-sm">
+              <img src="images/project2.jpg" class="card-img-top" alt="Project 2">
+              <div class="card-body">
+                <h5 class="card-title">Project Two</h5>
+                <p class="card-text">An innovative platform for seamless collaboration.</p>
+                <a href="#" class="btn btn-outline-primary">View Project</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
-
-  <main class="container">
-    <section id="about" class="section">
-      <div class="container">
-        <h2>About Me</h2>
-        <p>
-          Welcome to my website! I'm a passionate developer with a love for coding and Formula 1. I enjoy building web applications and exploring new technologies.
-        </p>
-      </div>
     </section>
 
-    <section id="projects" class="section">
+    <section id="contact" class="py-5 bg-light text-center">
       <div class="container">
-        <h2>Projects</h2>
-        <p>
-          Check out some of my latest projects and see what I've been working on.
-        </p>
-        <!-- Add project cards or project list here -->
+        <h2 class="fw-bold">Contact Me</h2>
+        <p class="lead">Let's connect! Reach out through any of the platforms below.</p>
+        <div>
+          <a href="#" class="btn btn-dark mx-2"><i class="bi bi-github"></i> GitHub</a>
+          <a href="#" class="btn btn-dark mx-2"><i class="bi bi-linkedin"></i> LinkedIn</a>
+          <a href="#" class="btn btn-dark mx-2"><i class="bi bi-envelope"></i> Email</a>
+        </div>
       </div>
     </section>
-
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact Me</h2>
-        <p>
-          Let's connect! Feel free to reach out to me through any of the following channels:
-        </p>
-        <div class="icons-social">
-          <a href="
+  </main>
+  
+  <footer class="py-4 bg-dark text-white text-center">
+    <p class="mb-0">&copy; 2025 Douglas Arigah. All Rights Reserved.</p>
+  </footer>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
