--- a/index.html
+++ b/index.html
@@ -1,95 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Douglas Arigah - Full Stack Developer Portfolio">
-  <title>Douglas Arigah | Full Stack Developer</title>
-  <link rel="icon" href="favicon.ico" type="image/png">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Douglas Arigah | Full Stack Developer</title>
+
+	<link rel="icon" href="favicon.ico" type="image/png" />
+
+	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300,400,700" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/themes/indigo-white.css">
+
+	<style>
+		body {
+			background: url('GZDuzDVWAAAHE8b.jpg') no-repeat center center fixed;
+			background-size: cover;
+		}
+	</style>
 </head>
-<body>
-  <header class="masthead text-white text-center d-flex align-items-center justify-content-center" style="background: url('images/hero-bg.jpg') no-repeat center center/cover; height: 100vh;">
-    <div class="container">
-      <h1 class="display-3 fw-bold">Douglas Arigah</h1>
-      <p class="lead">Full Stack Developer | Tech Enthusiast | F1 Fanatic</p>
-      <a href="#projects" class="btn btn-primary btn-lg mt-3">View My Work</a>
-    </div>
-  </header>
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">DA</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  
-  <main>
-    <section id="about" class="py-5 bg-light">
-      <div class="container text-center">
-        <h2 class="fw-bold">About Me</h2>
-        <p class="lead">Passionate about designing Telco Networks, coding, scripting, and exploring cutting-edge technologies.</p>
-      </div>
-    </section>
-
-    <section id="projects" class="py-5">
-      <div class="container text-center">
-        <h2 class="fw-bold">Projects</h2>
-        <p class="lead">Explore some of my recent work.</p>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card shadow-sm">
-              <img src="images/project1.jpg" class="card-img-top" alt="Project 1">
-              <div class="card-body">
-                <h5 class="card-title">Project One</h5>
-                <p class="card-text">A web application designed to streamline workflow.</p>
-                <a href="#" class="btn btn-outline-primary">View Project</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card shadow-sm">
-              <img src="images/project2.jpg" class="card-img-top" alt="Project 2">
-              <div class="card-body">
-                <h5 class="card-title">Project Two</h5>
-                <p class="card-text">An innovative platform for seamless collaboration.</p>
-                <a href="#" class="btn btn-outline-primary">View Project</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact" class="py-5 bg-light text-center">
-      <div class="container">
-        <h2 class="fw-bold">Contact Me</h2>
-        <p class="lead">Let's connect! Reach out through any of the platforms below.</p>
-        <div>
-          <a href="#" class="btn btn-dark mx-2"><i class="bi bi-github"></i> GitHub</a>
-          <a href="#" class="btn btn-dark mx-2"><i class="bi bi-linkedin"></i> LinkedIn</a>
-          <a href="#" class="btn btn-dark mx-2"><i class="bi bi-envelope"></i> Email</a>
-        </div>
-      </div>
-    </section>
-  </main>
-  
-  <footer class="py-4 bg-dark text-white text-center">
-    <p class="mb-0">&copy; 2025 Douglas Arigah. All Rights Reserved.</p>
-  </footer>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<body class="d-flex align-items-center justify-content-center vh-100 text-white">
+	<main class="text-center">
+		<div class="display-4 fw-bold">Hello, I'm Arigah!</div>
+		<div class="lead mt-3">Full Stack Developer | Code Fanatic | Linux Hacker | F1 Aficionado</div>
+		<div class="mt-4">
+			<a class="btn btn-outline-light btn-lg me-2" href="#projects">View My Work</a>
+			<a class="btn btn-primary btn-lg" href="#contact">Contact Me</a>
+		</div>
+		<div class="icons-social mt-5">
+			<a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/darigah" class="text-white mx-2 fs-3"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://dev.to/darigah" class="text-white mx-2 fs-3"><i class="fab fa-dev"></i></a>
+			<a target="_blank" href="https://stackoverflow.com/story/darigah" class="text-white mx-2 fs-3"><i class="fab fa-stack-overflow"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/darigah" class="text-white mx-2 fs-3"><i class="fab fa-linkedin"></i></a>
+			<a target="_blank" href="https://medium.com/@darigah" class="text-white mx-2 fs-3"><i class="fab fa-medium"></i></a>
+		</div>
+	</main>
 </body>
 </html>
