--- a/index.html
+++ b/index.html
@@ -13,22 +13,44 @@
 	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/themes/indigo-white.css">
 
 	<style>
 		body {
 			background: url('GZDuzDVWAAAHE8b.jpg') no-repeat center center fixed;
 			background-size: cover;
+			color: #fff;
+		}
+		.overlay {
+			background: rgba(0, 0, 0, 0.6);
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+		.container-content {
+			position: relative;
+			z-index: 1;
+			padding: 2rem;
+			border-radius: 10px;
+			background: rgba(255, 255, 255, 0.1);
+			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+		}
+		.btn-custom {
+			border-radius: 30px;
+			padding: 10px 20px;
+			font-weight: bold;
 		}
 	</style>
 </head>
-<body class="d-flex align-items-center justify-content-center vh-100 text-white">
-	<main class="text-center">
+<body class="d-flex align-items-center justify-content-center vh-100">
+	<div class="overlay"></div>
+	<main class="text-center container-content">
 		<div class="display-4 fw-bold">Hello, I'm Arigah!</div>
 		<div class="lead mt-3">Full Stack Developer | Code Fanatic | Linux Hacker | F1 Aficionado</div>
 		<div class="mt-4">
-			<a class="btn btn-outline-light btn-lg me-2" href="#projects">View My Work</a>
-			<a class="btn btn-primary btn-lg" href="#contact">Contact Me</a>
+			<a class="btn btn-outline-light btn-lg me-2 btn-custom" href="#projects">View My Work</a>
+			<a class="btn btn-primary btn-lg btn-custom" href="#contact">Contact Me</a>
 		</div>
 		<div class="icons-social mt-5">
 			<a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i class="fab fa-github"></i></a>
