--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="overlay"></div>
 	<main class="text-center container-content">
 		<div class="display-4 fw-bold">Hello, I'm Arigah!</div>
-		<div class="lead mt-3">Full Stack Developer | Code Fanatic | Linux Hacker | F1 Aficionado</div>
+		<div class="lead mt-3">Telco Network Design | Python | Scripting | F1 </div>
 		<div class="mt-4">
 			<a class="btn btn-outline-light btn-lg me-2 btn-custom" href="#projects">View My Work</a>
 			<a class="btn btn-primary btn-lg btn-custom" href="#contact">Contact Me</a>
