--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			background: url('GZDuzDVWAAAHE8b.jpg') no-repeat center center fixed;
 			background-size: cover;
 			color: #fff;
+			font-family: 'Roboto', sans-serif;
+			scroll-behavior: smooth;
 		}
 		.overlay {
 			background: rgba(0, 0, 0, 0.6);
@@ -33,13 +35,28 @@
 			z-index: 1;
 			padding: 2rem;
 			border-radius: 10px;
-			background: rgba(255, 255, 255, 0.1);
+			background: rgba(255, 255, 255, 0.15);
 			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+			animation: fadeIn 1.5s ease-in-out;
 		}
 		.btn-custom {
 			border-radius: 30px;
 			padding: 10px 20px;
 			font-weight: bold;
+			transition: all 0.3s ease;
+		}
+		.btn-custom:hover {
+			transform: scale(1.1);
+		}
+		.icons-social a {
+			transition: transform 0.3s ease;
+		}
+		.icons-social a:hover {
+			transform: translateY(-5px);
+		}
+		@keyframes fadeIn {
+			from { opacity: 0; transform: translateY(-20px); }
+			to { opacity: 1; transform: translateY(0); }
 		}
 	</style>
 </head>
@@ -47,7 +64,7 @@
 	<div class="overlay"></div>
 	<main class="text-center container-content">
 		<div class="display-4 fw-bold">Hello, I'm Arigah!</div>
-		<div class="lead mt-3">Telco Network Design | Python | Scripting | F1 </div>
+		<div class="lead mt-3">Full Stack Developer | Code Fanatic | Linux Hacker | F1 Aficionado</div>
 		<div class="mt-4">
 			<a class="btn btn-outline-light btn-lg me-2 btn-custom" href="#projects">View My Work</a>
 			<a class="btn btn-primary btn-lg btn-custom" href="#contact">Contact Me</a>
