--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Douglas Arigah | Full Stack Developer</title>
+	<title>Douglas Arigah | Core Network & Telco Cloud Engineer </title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -64,7 +64,7 @@
 	<div class="overlay"></div>
 	<main class="text-center container-content">
 		<div class="display-4 fw-bold">Hello, I'm Arigah!</div>
-		<div class="lead mt-3">Full Stack Developer | Code Fanatic | Linux Hacker | F1 Aficionado</div>
+		<div class="lead mt-3"> Core Network Design | Telco Cloud | Coding | F1 </div>
 		<div class="mt-4">
 			<a class="btn btn-outline-light btn-lg me-2 btn-custom" href="#projects">View My Work</a>
 			<a class="btn btn-primary btn-lg btn-custom" href="#contact">Contact Me</a>
