--- a/index.html
+++ b/index.html
@@ -1,81 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title>Douglas Arigah | Core Network & Telco Cloud Engineer </title>
-
-	<link rel="icon" href="favicon.ico" type="image/png" />
-
-	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300,400,700" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-
-	<style>
-		body {
-			background: url('GZDuzDVWAAAHE8b.jpg') no-repeat center center fixed;
-			background-size: cover;
-			color: #fff;
-			font-family: 'Roboto', sans-serif;
-			scroll-behavior: smooth;
-		}
-		.overlay {
-			background: rgba(0, 0, 0, 0.6);
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-		}
-		.container-content {
-			position: relative;
-			z-index: 1;
-			padding: 2rem;
-			border-radius: 10px;
-			background: rgba(255, 255, 255, 0.15);
-			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-			animation: fadeIn 1.5s ease-in-out;
-		}
-		.btn-custom {
-			border-radius: 30px;
-			padding: 10px 20px;
-			font-weight: bold;
-			transition: all 0.3s ease;
-		}
-		.btn-custom:hover {
-			transform: scale(1.1);
-		}
-		.icons-social a {
-			transition: transform 0.3s ease;
-		}
-		.icons-social a:hover {
-			transform: translateY(-5px);
-		}
-		@keyframes fadeIn {
-			from { opacity: 0; transform: translateY(-20px); }
-			to { opacity: 1; transform: translateY(0); }
-		}
-	</style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Douglas Arigah | Core Network & Telco Cloud Engineer</title>
+    <link rel="icon" href="favicon.ico" type="image/png" />
+    <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="d-flex align-items-center justify-content-center vh-100">
-	<div class="overlay"></div>
-	<main class="text-center container-content">
-		<div class="display-4 fw-bold">Hello, I'm Arigah!</div>
-		<div class="lead mt-3"> Core Network Design | Telco Cloud | Coding | F1 </div>
-		<div class="mt-4">
-			<a class="btn btn-outline-light btn-lg me-2 btn-custom" href="#projects">View My Work</a>
-			<a class="btn btn-primary btn-lg btn-custom" href="#contact">Contact Me</a>
-		</div>
-		<div class="icons-social mt-5">
-		        <a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://dev.to/darigah" class="text-white mx-2 fs-3"><i class="fab fa-dev"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/darigah" class="text-white mx-2 fs-3"><i class="fab fa-stack-overflow"></i></a>
-			<a target="_blank" href="https://www.linkedin.com/in/darigah" class="text-white mx-2 fs-3"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@darigah" class="text-white mx-2 fs-3"><i class="fab fa-medium"></i></a>
-		</div>
-	</main>
-</body>
-</html>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Arigah</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="d-flex align-items-center justify-content-center vh-100 text-center">
+        <div class="overlay"></div>
