--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <div class="container-content">
 
         <h1 class="display-3 fw-bold animate__animated animate__fadeIn">
-            Hello, I'm Arigah!
+            Where Signals Meet Systems!
         </h1>
 
         <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">
-            Core Network Design | Telco Cloud | Coding | Philosophy
+            Core Network | Telco Cloud | Coding | Philosophy
         </p>
 
         <!-- Animated Wave Art -->
@@ -92,9 +92,9 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <p class="lead">
-                    I'm a passionate Core Network & Telco Cloud Engineer with expertise in designing scalable
-                    telecom solutions. I love coding, exploring cloud technologies, and cheering for my favorite
-                    F1 teams. My goal is to bridge technology and innovation to create impactful solutions.
+                    I work on the parts of telecom networks you only notice when they fail, and my job is to make sure you never notice them.
+                    I enjoy turning messy infrastructure into calm, scalable systems, automating the boring parts, and pretending sports isn’t just applied physics with egos.
+                    I like building things that scale quietly and work loudly.
                 </p>
             </div>
 
@@ -117,9 +117,9 @@
                 <div class="card project-card">
                     <div class="card-body text-center">
                         <i class="fas fa-network-wired fa-3x mb-3"></i>
-                        <h5 class="card-title">5G Core Network Design</h5>
+                        <h5 class="card-title">Core Network </h5>
                         <p class="card-text">
-                            Designed a scalable 5G core network architecture for high-speed connectivity.
+                            Core network architecture for high-speed connectivity.
                         </p>
                         <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                     </div>
@@ -130,9 +130,9 @@
                 <div class="card project-card">
                     <div class="card-body text-center">
                         <i class="fas fa-cloud fa-3x mb-3"></i>
-                        <h5 class="card-title">Telco Cloud Migration</h5>
+                        <h5 class="card-title">Telco Cloud </h5>
                         <p class="card-text">
-                            Led migration of legacy systems to a Kubernetes-based telco cloud.
+                            Kubernetes-based telco cloud.
                         </p>
                         <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                     </div>
@@ -143,9 +143,9 @@
                 <div class="card project-card">
                     <div class="card-body text-center">
                         <i class="fas fa-code fa-3x mb-3"></i>
-                        <h5 class="card-title">Automation Scripts</h5>
+                        <h5 class="card-title">Automation </h5>
                         <p class="card-text">
-                            Developed Python scripts to automate network monitoring tasks.
+                            Python scripts to automate network tasks.
                         </p>
                         <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                     </div>
