--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <div class="container-content">
 
         <h1 class="display-3 fw-bold animate__animated animate__fadeIn">
-            Where Signals Meet Systems!
+            Where Signals Meet Systems
         </h1>
 
         <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">
-            Core Network | Telco Cloud | Coding | Philosophy
+            Core Networks | Telco Cloud | Coding | Philosophy
         </p>
 
         <!-- Animated Wave Art -->
