--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="is-preload">
 
 <!-- ================= NAVBAR ================= -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container">
+    <div id="wrapper">
         <a class="navbar-brand" href="#">Arigah</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -32,14 +32,16 @@
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+      
         <div class="collapse navbar-collapse" id="navbarNav">
+            <nav>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
+            </nav>
         </div>
     </div>
 </nav>
