--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 </head>
 
 <body class="is-preload">
+ <div id="wrapper">
 
 <!-- ================= NAVBAR ================= -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+ <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div id="wrapper">
         <a class="navbar-brand" href="#">Arigah</a>
 
@@ -226,6 +227,6 @@
             loop: true
         });
 </script>
-
+</div>
 </body>
 </html>
