--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
                 Where Signals Meet Systems
             </h1>
 
-            <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">
-                Core Networks | Telco Cloud | Coding | Philosophy
-            </p>
+            <div class="tag-container animate__animated animate__fadeIn animate__delay-1s">
+                <span class="tag-box">Core Networks</span>
+                <span class="tag-box">Telco Cloud</span>
+                <span class="tag-box">Coding</span>
+                <span class="tag-box">Philosophy</span>
+            </div>
 
             <!-- Animated Wave Art -->
             <img src="images/coverart.png" alt="Optimization Wave Art" class="hero-wave" />
