--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Douglas Arigah | Core Network & Telco Cloud Engineer</title>
+    <title>Douglas Ariga | Core Network & Telco Cloud Engineer</title>
 
     <link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -28,7 +28,7 @@
     <!-- ================= NAVBAR ================= -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Arigah</a>
+            <a class="navbar-brand" href="#">Douglas Ariga Migiro</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -190,7 +190,7 @@
 
     <!-- ================= FOOTER ================= -->
     <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">&copy; 2026 Douglas Arigah. All Rights Reserved.</p>
+        <p class="mb-0">&copy; 2026 darigah. All Rights Reserved.</p>
     </footer>
 
     <!-- ================= SCRIPTS ================= -->
