--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <i class="fas fa-network-wired fa-3x mb-3"></i>
                             <h5 class="card-title">Core Network </h5>
                             <p class="card-text">
-                                Core network architecture for high-speed connectivity.
+                                Core network architectures for high-speed connectivity
                             </p>
                             <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                         </div>
@@ -139,7 +139,7 @@
                             <i class="fas fa-cloud fa-3x mb-3"></i>
                             <h5 class="card-title">Telco Cloud </h5>
                             <p class="card-text">
-                                Kubernetes-based telco cloud.
+                                Kubernetes-based telco cloud
                             </p>
                             <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                         </div>
@@ -152,7 +152,7 @@
                             <i class="fas fa-code fa-3x mb-3"></i>
                             <h5 class="card-title">Automation </h5>
                             <p class="card-text">
-                                Python scripts to automate network tasks.
+                                Scripts to automate network tasks
                             </p>
                             <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                         </div>
@@ -190,7 +190,7 @@
 
     <!-- ================= FOOTER ================= -->
     <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">&copy; 2026 darigah. All Rights Reserved.</p>
+        <p class="mb-0">&copy; © 2026 aridaggy@gmail.com. All rights reserved </p>
     </footer>
 
     <!-- ================= SCRIPTS ================= -->
