--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <!-- ================= FOOTER ================= -->
     <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">&copy; © 2026 aridaggy@gmail.com. All rights reserved </p>
+        <p class="mb-0">&copy; 2026 aridaggy@gmail.com. All rights reserved </p>
     </footer>
 
     <!-- ================= SCRIPTS ================= -->
