Fix punctuation in index.html paragraphs

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         <!-- Hero (Cursor-style) -->
         <section class="hero" id="home">
             <h1>Where signals meet systems.</h1>
-            <p class="sub">Core networks, telco cloud, and automation—built to run quietly at scale.</p>
+            <p class="sub">Core networks, telco cloud, and automation, built to run quietly at scale.</p>
             <div class="ctas">
                 <a href="#projects-section" class="cta cta-primary">View my work</a>
                 <a href="#contact" class="cta cta-secondary">Get in touch →</a>
@@ -705,7 +705,7 @@
         <!-- About -->
         <section id="about">
             <h2>About me</h2>
-            <p>I work on the parts of telecom networks you only notice when they fail—my job is to make sure you never notice them. I enjoy turning messy infrastructure into calm, scalable systems and building things that scale quietly and work loudly.</p>
+            <p>I work on the parts of telecom networks you only notice when they fail, my job is to make sure you never notice them. I enjoy turning messy infrastructure into calm, scalable systems and building things that scale quietly and work loudly.</p>
             <div class="tag-container">
                 <span class="tag-box">Core Networks</span>
                 <span class="tag-box">Telco Cloud</span>
@@ -726,21 +726,21 @@
         <!-- Projects -->
         <section id="projects-section">
             <h2>Projects</h2>
-            <p>Core network, telco cloud, and automation work.</p>
+            <p>Core network, telco cloud, and automation work</p>
             <div class="cards">
                 <div class="card">
                     <h3>Core Network</h3>
-                    <p>Core network architectures for high-speed connectivity.</p>
+                    <p>Core network architectures for high-speed connectivity</p>
                     <a href="#" class="btn-outline">Learn more</a>
                 </div>
                 <div class="card">
                     <h3>Telco Cloud</h3>
-                    <p>Kubernetes-based telco cloud.</p>
+                    <p>Kubernetes-based telco cloud</p>
                     <a href="#" class="btn-outline">Learn more</a>
                 </div>
                 <div class="card">
                     <h3>Automation</h3>
-                    <p>Scripts to automate network tasks.</p>
+                    <p>Scripts to automate network tasks</p>
                     <a href="#" class="btn-outline">Learn more</a>
                 </div>
             </div>
