--- a/index.html
+++ b/index.html
@@ -750,12 +750,13 @@
         <section id="contact">
             <h2>Get in touch</h2>
             <p>Drop a line for collaboration or questions.</p>
-            <form style="max-width: 420px; margin: 2rem auto 0;">
-                <input type="text" placeholder="Name" required style="width:100%;padding:0.75rem 1rem;margin-bottom:0.75rem;background:rgba(255,255,255,0.06);border:1px solid var(--border);border-radius:8px;color:var(--text);font-family:inherit;font-size:0.9375rem;">
-                <input type="email" placeholder="Email" required style="width:100%;padding:0.75rem 1rem;margin-bottom:0.75rem;background:rgba(255,255,255,0.06);border:1px solid var(--border);border-radius:8px;color:var(--text);font-family:inherit;font-size:0.9375rem;">
-                <textarea placeholder="Message" rows="4" required style="width:100%;padding:0.75rem 1rem;margin-bottom:1rem;background:rgba(255,255,255,0.06);border:1px solid var(--border);border-radius:8px;color:var(--text);font-family:inherit;font-size:0.9375rem;resize:vertical;"></textarea>
-                <button type="submit" class="cta cta-primary" style="width:100%;cursor:pointer;border:none;">Send message</button>
+            <<form action="https://formspree.io/f/xykdyyey" method="POST" style="max-width: 420px; margin: 2rem auto 0;">
+                 <input type="text" name="name" placeholder="Name" required style="width:100%;padding:0.75rem 1rem;margin-bottom:0.75rem;background:rgba(255,255,255,0.06);border:1px solid var(--border);border-radius:8px;color:var(--text);font-family:inherit;font-size:0.9375rem;">
+                 <input type="email" name="email" placeholder="Email" required style="width:100%;padding:0.75rem 1rem;margin-bottom:0.75rem;background:rgba(255,255,255,0.06);border:1px solid var(--border);border-radius:8px;color:var(--text);font-family:inherit;font-size:0.9375rem;">
+                 <textarea name="message" placeholder="Message" rows="4" required style="width:100%;padding:0.75rem 1rem;margin-bottom:1rem;background:rgba(255,255,255,0.06);border:1px solid var(--border);border-radius:8px;color:var(--text);font-family:inherit;font-size:0.9375rem;resize:vertical;"></textarea>
+                 <button type="submit" class="cta cta-primary" style="width:100%;cursor:pointer;border:none;">Send message</button>
             </form>
+
         </section>
 
         <footer>
